// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Departure delayed 2min 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: rgba(255, 0, 0, 0.3);"
      >
        <div>
          42
           | 
          Mocked Terminus
        </div>
        <div
          style="color: red; font-weight: bold;"
        />
        <div
          style="color: red; font-weight: bold;"
        >
          Verspätung: 2 min
        </div>
        <div>
          aktuelle Uhrzeit: 00:00 Uhr
        </div>
        <div>
          geplante Uhrzeit: 00:00 Uhr
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: rgba(255, 0, 0, 0.3);"
    >
      <div>
        42
         | 
        Mocked Terminus
      </div>
      <div
        style="color: red; font-weight: bold;"
      />
      <div
        style="color: red; font-weight: bold;"
      >
        Verspätung: 2 min
      </div>
      <div>
        aktuelle Uhrzeit: 00:00 Uhr
      </div>
      <div>
        geplante Uhrzeit: 00:00 Uhr
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Departure earlier 3min 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: rgba(0, 255, 0, 0.3);"
      >
        <div>
          42
           | 
          Mocked Terminus
        </div>
        <div
          style="color: red; font-weight: bold;"
        />
        <div
          style="color: green; font-weight: bold;"
        >
          Verspätung: -3 min
        </div>
        <div>
          aktuelle Uhrzeit: 00:00 Uhr
        </div>
        <div>
          geplante Uhrzeit: 00:00 Uhr
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: rgba(0, 255, 0, 0.3);"
    >
      <div>
        42
         | 
        Mocked Terminus
      </div>
      <div
        style="color: red; font-weight: bold;"
      />
      <div
        style="color: green; font-weight: bold;"
      >
        Verspätung: -3 min
      </div>
      <div>
        aktuelle Uhrzeit: 00:00 Uhr
      </div>
      <div>
        geplante Uhrzeit: 00:00 Uhr
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Departure on time 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: lightblue;"
      >
        <div>
          42
           | 
          Mocked Terminus
        </div>
        <div>
          aktuelle Uhrzeit: 00:00 Uhr
        </div>
        <div>
          geplante Uhrzeit: 00:00 Uhr
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: lightblue;"
    >
      <div>
        42
         | 
        Mocked Terminus
      </div>
      <div>
        aktuelle Uhrzeit: 00:00 Uhr
      </div>
      <div>
        geplante Uhrzeit: 00:00 Uhr
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Departure with nullable values 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: lightblue;"
      >
        <div>
          42
           | 
          Mocked Terminus
        </div>
        <div />
        <div>
          geplante Uhrzeit: 00:00 Uhr
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="border: 1px solid gray; border-radius: 10px; padding: 10px; margin: 10px; flex: 0 1 300px; background-color: lightblue;"
    >
      <div>
        42
         | 
        Mocked Terminus
      </div>
      <div />
      <div>
        geplante Uhrzeit: 00:00 Uhr
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
